--- a/indexreverse.html
+++ b/indexreverse.html
@@ -156,7 +156,7 @@
            </div>
            
            <div class="arrow-left-box" onclick="plusSlides(-1)"><div class="arrow-left"></div></div>
-           <div class="dots" style="margin-left: -24px;">
+           <div class="dots" id="indexdots">
 <!--ui&ux dots-->
                <span class="dot" onclick="currentSlide(1)"></span>
                <span class="dot" onclick="currentSlide(2)"></span>
