--- a/brightyourlife.html
+++ b/brightyourlife.html
@@ -5,6 +5,8 @@
        <title>Icy Leng Design - Macaron</title>
        <link type="text/css" rel="stylesheet" href="css/detailstylesheet.css"/>
        <link href="https://fonts.googleapis.com/css?family=Radley:400,400i|Raleway:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+       <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1" />
+       <meta name="apple-mobile-web-app-status-bar-style" content="blank" />
     </head>
        
    <body>
@@ -88,7 +90,7 @@
               <a href="futurebirthday.html">
                   <h4>previous</h4>
                   <div class="animationright-to-left" style="background-color: mistyrose"></div>
-                  <h3 style="font-size: 48px;">Future party</h3>
+                  <h3>Future party</h3>
               </a>
           </div>
        
@@ -96,7 +98,7 @@
               <a href="newchinglish.html">
                   <h4>next</h4>
                   <div class="animationleft-to-right" style="background: transparent linear-gradient(to top left, #6a47ff 30%, #9013fe 60%, #ff5aa0 100%)"></div>
-                  <h3 style="font-size: 48px;">New chinglish</h3>
+                  <h3>New chinglish</h3>
               </a>
           </div>
        </div>
