--- a/futurebirthday.html
+++ b/futurebirthday.html
@@ -5,6 +5,8 @@
        <title>Icy Leng Design - Macaron</title>
        <link type="text/css" rel="stylesheet" href="css/detailstylesheet.css"/>
        <link href="https://fonts.googleapis.com/css?family=Radley:400,400i|Raleway:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+       <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1" />
+       <meta name="apple-mobile-web-app-status-bar-style" content="blank" />
     </head>
        
    <body>
@@ -37,7 +39,7 @@
            </span>
            
            <span class="discription-column">
-               <h2>Catalog</h2>
+               <h2>Tools</h2>
                <p>Adobe After Effect<br>Adobe Premiere<br>Adobe Illustrator<br>Canon 5D mark III</p>
            </span>
        </div>
