--- a/sauces.html
+++ b/sauces.html
@@ -5,6 +5,8 @@
        <title>Icy Leng Design - Macaron</title>
        <link type="text/css" rel="stylesheet" href="css/detailstylesheet.css"/>
        <link href="https://fonts.googleapis.com/css?family=Radley:400,400i|Raleway:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+       <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1" />
+       <meta name="apple-mobile-web-app-status-bar-style" content="blank" />
     </head>
        
    <body>
@@ -26,12 +28,12 @@
        </header>
        
        <div class="discription">
-           <span class="discription-column" style="width: 37.5vw">
+           <span class="discription-column two-column">
                <h2>Project</h2>
                <p>XiangJie is a handmade chili sauce brand. This identity is based on the merterials they used in the produce. </p>
            </span>
 
-           <span class="discription-column" style="width: 37.5vw">
+           <span class="discription-column two-column">
                <h2>Role</h2>
                <p>Identity Branding</p>
            </span>
