--- a/newchinglish.html
+++ b/newchinglish.html
@@ -2,7 +2,7 @@
   <html>
        
    <head>
-       <title>Icy Leng Design - Macaron</title>
+       <title>Icy Leng Design - New Chinglish</title>
        <link type="text/css" rel="stylesheet" href="css/detailstylesheet.css"/>
        <link href="https://fonts.googleapis.com/css?family=Radley:400,400i|Raleway:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
        <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1" />
